css/style.css
body{
  	background: url('http://res.cloudinary.com/gerak1/image/upload/v1471694479/wiki-bg_vimb1w.jpg') no-repeat center center fixed;
  	-webkit-background-size: cover;
       -moz-background-size: cover;
         -o-background-size: cover;
            background-size: cover;
}

.container-fluid, 
.col-md-8 {
  padding:5%;
}

h1 {
	color: white;
}

.searchAndButtons, 
.onlyLink,
h1 {
  text-align: center;
}

.btn, 
span {
  font-size: 1.25em;
}

.onlyLink, 
footer {
  padding: 1%;
}

.searchResults {
  background: white;
}

#search {
  font-size: 1.4em;
}

